# testForTest

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  anotherFile.txt  content.txt  delete.txt  deleteFile.txt  fileGit.txt  marinos.txt  newFile.txt  newFileAgain.txt  new_file_branch.txt  rebaseFile.txt  resetFile.txt  run.sh
.github/workflows/: Main.cpp  checkDifferentArch.yml  run.sh
Code_in_MAC/: main.cpp
exercises/: main.cpp  records.cpp  records.hpp
src/: CMakeLists.txt  CustomPrint.cpp  CustomPrint.h
